update test config

--- a/test/src/test/resources/testConfig.properties
+++ b/test/src/test/resources/testConfig.properties
@@ -24,7 +24,7 @@ MongoDB-config=isSupportDiffTypeHistoryData=true,isSupportKey=false,isAbleToClea
 Redis-config=isSupportDiffTypeHistoryData=false,isSupportKey=false,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
 FileSystem-config=isSupportDiffTypeHistoryData=true,isSupportKey=false,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
 MySQL-config=isSupportDiffTypeHistoryData=true,isSupportKey=false,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
-FileStore-config=isSupportDiffTypeHistoryData=true,isSupportKey=true,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
+FileStore-config=isSupportDiffTypeHistoryData=false,isSupportKey=false,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
 
 # DataSources Test Config
 IoTDB12_mock=127.0.0.1#6667#IoTDB12#username=root#password=root#sessionPoolSize=20#has_data=false#is_read_only=false
