--- a/.github/workflows/case-regression.yml
+++ b/.github/workflows/case-regression.yml
@@ -56,7 +56,7 @@ jobs:
             - name: Install IGinX with Maven
               shell: bash
               run: |
-                  mvn clean package -DskipTests -P-format
+                  mvn clean package -DskipTests -P-format -q
 
             - name: Write Conf
               uses: ./.github/actions/confWriter
@@ -70,7 +70,7 @@ jobs:
               if: always()
               shell: bash
               run: |
-                  mvn test -Dtest=MixClusterShowColumnsRegressionTest -Dsurefire.failIfNoSpecifiedTests=false -P-format
+                  mvn test -q -Dtest=MixClusterShowColumnsRegressionTest -DfailIfNoTests=false -P-format
 
             - name: Show IGinX log
               if: always()
