--- a/.github/workflows/standalone-test-pushdown.yml
+++ b/.github/workflows/standalone-test-pushdown.yml
@@ -49,6 +49,10 @@ jobs:
                   python-version: ${{ matrix.python-version }}
                   java: ${{ matrix.java }}
 
+            - if: runner.os == 'Windows'
+              name: Set JAVA_OPTS
+              run: echo "JAVA_OPTS=-Xmx4g -Xmx2g" >> $GITHUB_ENV
+
             - name: Run Metadata
               uses: ./.github/actions/metadataRunner
               with:
@@ -62,7 +66,7 @@ jobs:
             - name: Install IGinX with Maven
               shell: bash
               run: |
-                  mvn clean package -DskipTests -P-format
+                  mvn clean package -DskipTests -P-format -q
 
             - name: Change IGinX config
               uses: ./.github/actions/confWriter
@@ -82,7 +86,7 @@ jobs:
                   METADATA_STORAGE: ${{ matrix.metadata }}
               run: |
                   chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/test_union.sh"
-                  mvn test -Dtest=Controller -Dsurefire.failIfNoSpecifiedTests=false -P-format
+                  mvn test -q -Dtest=Controller -DfailIfNoTests=false -P-format
 
             - name: Show test result
               if: always()
