--- a/.github/workflows/standard-test-suite.yml
+++ b/.github/workflows/standard-test-suite.yml
@@ -19,16 +19,14 @@ jobs:
     #        uses: ./.github/workflows/case-regression.yml
     #        with:
     #            metadata-matrix: '["zookeeper"]'
-#    standalone-test:
-#        uses: ./.github/workflows/standalone-test.yml
-#        with:
-#            metadata-matrix: '["zookeeper"]'
-#            db-matrix: '["FileStore"]'
-    standalone-test-pushdown:
-        uses: ./.github/workflows/standalone-test-pushdown.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-            db-matrix: '["FileStore", "PostgreSQL"]'
+    #    standalone-test:
+    #        uses: ./.github/workflows/standalone-test.yml
+    #        with:
+    #            metadata-matrix: '["zookeeper"]'
+    #    standalone-test-pushdown:
+    #        uses: ./.github/workflows/standalone-test-pushdown.yml
+    #        with:
+    #            metadata-matrix: '["zookeeper"]'
     db-ce:
         uses: ./.github/workflows/DB-CE.yml
         with:
