--- a/dataSource/filestore/pom.xml
+++ b/dataSource/filestore/pom.xml
@@ -36,6 +36,12 @@
             <groupId>org.apache.thrift</groupId>
             <artifactId>libthrift</artifactId>
             <version>0.20.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>cn.edu.tsinghua.iginx</groupId>
