--- a/dataSource/relational/src/main/resources/oceanbase-meta.properties
+++ b/dataSource/relational/src/main/resources/oceanbase-meta.properties
@@ -40,6 +40,8 @@ database_query_sql=SELECT SCHEMA_NAME AS datname FROM information_schema.schemat
 is_support_full_join=false
 # filter中正则匹配的符号
 regex_like_symbol=REGEXP
+# filter中不匹配正则表达式的符号
+not_regex_like_symbol=NOT REGEXP
 # jdbc元数据是否支持特殊字符的识别
 jdbc_support_special_char=false
 
