--- a/.github/workflows/tpc-h.yml
+++ b/.github/workflows/tpc-h.yml
@@ -91,7 +91,13 @@ jobs:
 
             - name: Get Old Version IGinX
               shell: bash
-              run: git clone https://github.com/IGinX-THU/IGinX.git
+              run: |
+                  git clone https://github.com/IGinX-THU/IGinX.git
+                  cp -rf test/src/test/resources/tpch/queries/* IGinX/test/src/test/resources/tpch/queries/
+                  cp -rf test/src/test/resources/tpch/sf0.1/* IGinX/test/src/test/resources/tpch/sf0.1/
+                  cp -rf test/src/test/resources/tpch/udf/* IGinX/test/src/test/resources/tpch/udf/
+                  cp -f test/src/test/resources/testConfig.properties IGinX/test/src/test/resources/testConfig.properties
+            # 新增tpc-h查询测试时，旧版本代码中没有这些查询，需从新分支复制过去，添加完所有的tpc_h测试后可删除这些复制命令
 
             - name: Rewrite DB Conf in Old IGinX
               uses: ./.github/actions/dbConfWriter
