--- a/.github/workflows/standard-test-suite.yml
+++ b/.github/workflows/standard-test-suite.yml
@@ -11,35 +11,34 @@ concurrency:
     cancel-in-progress: true
 
 jobs:
-#    unit-test:
-#        uses: ./.github/workflows/unit-test.yml
-#    unit-mds:
-#        uses: ./.github/workflows/unit-mds.yml
-#    case-regression:
-#        uses: ./.github/workflows/case-regression.yml
-#        with:
-#            metadata-matrix: '["zookeeper"]'
-#    standalone-test:
-#        uses: ./.github/workflows/standalone-test.yml
-#        with:
-#            metadata-matrix: '["zookeeper"]'
-#    standalone-test-pushdown:
-#        uses: ./.github/workflows/standalone-test-pushdown.yml
-#        with:
-#            metadata-matrix: '["zookeeper"]'
+    unit-test:
+        uses: ./.github/workflows/unit-test.yml
+    unit-mds:
+        uses: ./.github/workflows/unit-mds.yml
+    case-regression:
+        uses: ./.github/workflows/case-regression.yml
+        with:
+            metadata-matrix: '["zookeeper"]'
+    standalone-test:
+        uses: ./.github/workflows/standalone-test.yml
+        with:
+            metadata-matrix: '["zookeeper"]'
+    standalone-test-pushdown:
+        uses: ./.github/workflows/standalone-test-pushdown.yml
+        with:
+            metadata-matrix: '["zookeeper"]'
     db-ce:
         uses: ./.github/workflows/DB-CE.yml
         with:
             metadata-matrix: '["zookeeper"]'
-            db-matrix: '["FileStore"]'
-#    remote-test:
-#        uses: ./.github/workflows/remote-test.yml
-#        with:
-#            metadata-matrix: '["zookeeper"]'
-#    assemebly-test:
-#        uses: ./.github/workflows/assembly-test.yml
-#    tpc-h-regression-test:
-#        uses: ./.github/workflows/tpc-h.yml
-#        with:
-#            os-matrix: '["ubuntu-latest"]'
-#            metadata-matrix: '["zookeeper"]'
+    remote-test:
+        uses: ./.github/workflows/remote-test.yml
+        with:
+            metadata-matrix: '["zookeeper"]'
+    assemebly-test:
+        uses: ./.github/workflows/assembly-test.yml
+    tpc-h-regression-test:
+        uses: ./.github/workflows/tpc-h.yml
+        with:
+            os-matrix: '["ubuntu-latest"]'
+            metadata-matrix: '["zookeeper"]'
