--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -44,7 +44,7 @@
         </dependency>
         <dependency>
             <groupId>cn.edu.tsinghua</groupId>
-            <artifactId>filesystem</artifactId>
+            <artifactId>filestore</artifactId>
         </dependency>
         <dependency>
             <groupId>cn.edu.tsinghua</groupId>
@@ -57,10 +57,6 @@
         <dependency>
             <groupId>cn.edu.tsinghua</groupId>
             <artifactId>mongodb</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>cn.edu.tsinghua</groupId>
-            <artifactId>parquet</artifactId>
         </dependency>
         <dependency>
             <groupId>cn.edu.tsinghua</groupId>
