--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -175,8 +175,8 @@
                                     <value>#storageEngineList=127.0.0.1#6667#iotdb</value>
                                 </replacement>
                                 <replacement>
-                                    <token>#storageEngineList=127.0.0.1#6667#parquet.*</token>
-                                    <value>storageEngineList=127.0.0.1#6667#parquet#dir=parquetData#iginx_port=6888</value>
+                                    <token>#storageEngineList=127.0.0.1#6667#filestore.*</token>
+                                    <value>storageEngineList=127.0.0.1#6667#filestore#dir=parquetData#iginx_port=6888</value>
                                 </replacement>
                                 <replacement>
                                     <token>UD[ATS]F,.*,.*,.*[.]py</token>
