--- a/.github/workflows/assembly-test.yml
+++ b/.github/workflows/assembly-test.yml
@@ -16,7 +16,7 @@ on:
                 description: "The operating system to run the test on"
                 type: string
                 required: false
-                default: '["ubuntu-latest", "macos-latest", "windows-latest"]'
+                default: '["macos-latest"]'
 
 env:
     FUNCTEST: SQLSessionIT#testShowColumns
