--- a/.github/workflows/unit-mds.yml
+++ b/.github/workflows/unit-mds.yml
@@ -12,7 +12,7 @@ on:
                 description: "The operating system to run the test on"
                 type: string
                 required: false
-                default: '["ubuntu-latest", "macos-latest", "windows-latest"]'
+                default: '["macos-latest"]'
 
 jobs:
     ZK-Test:
