--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -17,7 +17,7 @@ on:
                 description: "The operating system to run the test on"
                 type: string
                 required: false
-                default: '["macos-latest"]'
+                default: '["ubuntu-latest", "macos-latest", "windows-latest"]'
 
 jobs:
     Unit-Test:
