--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -34,14 +34,16 @@ runs:
               tzutil /s "China Standard Time"
               echo "JAVA_OPTS=-Xmx4g -Xms2g" >> %GITHUB_ENV%
 
+        # we use a patched version of lima(slower) because colima cannot start on M1 chips and the docker task is lightweight.
         - if: runner.os == 'macOS' &&  inputs.docker-required=='true'
           name: Install Docker on MacOS
           shell: bash
           run: |
               brew update
-              brew install docker colima
-              colima version
-              colima start --cpu 3 --memory 6 --disk 100 --vm-type=qemu --mount-type=sshfs --dns=1.1.1.1
+              brew install docker
+              brew install colima
+              sudo curl -L -o /opt/homebrew/Cellar/lima/0.22.0/bin/limactl https://github.com/mikekazakov/lima-nohvf/raw/master/limactl && sudo chmod +x /opt/homebrew/Cellar/lima/0.22.0/bin/limactl
+              colima start --network-address --arch arm64 --vm-type=qemu
               docker --version
 
         - if: inputs.scope=='all'
@@ -62,7 +64,7 @@ runs:
           uses: actions/setup-java@v4
           with:
               java-version: ${{ inputs.java }}
-              distribution: "temurin"
+              distribution: ${{ runner.os == 'macOS' && matrix.java == '8' && 'liberica' || 'temurin' }}
               cache: "maven"
 
         - name: Get project info
