--- a/pom.xml
+++ b/pom.xml
@@ -413,8 +413,7 @@
                                 <includes>
                                     <include>**/*.sql</include>
                                 </includes>
-                                <!--prettier/>
-                                <dbeaver/-->
+                                <dbeaver/>
                             </sql>
                             <yaml>
                                 <includes>
