--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -41,6 +41,7 @@ runs:
           run: |
               brew update
               brew install docker
+              brew install colima
               sudo curl -L -o /opt/homebrew/Cellar/lima/0.22.0/bin/limactl https://github.com/mikekazakov/lima-nohvf/raw/master/limactl && sudo chmod +x /opt/homebrew/Cellar/lima/0.22.0/bin/limactl
               colima start --network-address --arch arm64 --vm-type=qemu
               docker --version
