--- a/pom.xml
+++ b/pom.xml
@@ -413,6 +413,7 @@
                                 <includes>
                                     <include>**/*.sql</include>
                                 </includes>
+                                <!--<prettier/>-->
                                 <dbeaver/>
                             </sql>
                             <yaml>
