build: format sql (#427)
增加对SQL语句的格式化

--- a/pom.xml
+++ b/pom.xml
@@ -413,8 +413,8 @@
                                 <includes>
                                     <include>**/*.sql</include>
                                 </includes>
-                                <!--prettier/>
-                                <dbeaver/-->
+                                <!--<prettier/>-->
+                                <dbeaver/>
                             </sql>
                             <yaml>
                                 <includes>
