fix: format sql incorrectly

--- a/pom.xml
+++ b/pom.xml
@@ -415,6 +415,7 @@
                                 </includes>
                                 <!--<prettier/>-->
                                 <dbeaver/>
+                                <toggleOffOn/>
                             </sql>
                             <yaml>
                                 <includes>
