use picture for tests

--- a/test/src/test/resources/transform/TransformBinaryExportToIginx.yaml
+++ b/test/src/test/resources/transform/TransformBinaryExportToIginx.yaml
@@ -3,7 +3,7 @@ taskList:
   - taskType: "iginx"
     timeout: 10000000
     sqlList:
-      - "SELECT s3 FROM us.d1 WHERE key < 50;"
+      - "SELECT * from pics;"
   - taskType: "python"
     dataFlowType: "stream"
     timeout: 10000000
