--- a/test/src/test/resources/testConfig.properties
+++ b/test/src/test/resources/testConfig.properties
@@ -34,7 +34,7 @@ Redis_mock=127.0.0.1#6379#Redis#has_data=false#is_read_only=false#timeout=5000
 MySQL_mock=127.0.0.1#3306#relational#engine=mysql#has_data=false#username=root#meta_properties_path=../dataSource/relational/src/main/resources/mysql-meta-template.properties
 
 # class name for each DB
-FileStore_class=cn.edu.tsinghua.iginx.filestore.FileStorage
+FileStore_class=cn.edu.tsinghua.iginx.filestore.FileStoreStorage
 IoTDB12_class=cn.edu.tsinghua.iginx.iotdb.IoTDBStorage
 InfluxDB_class=cn.edu.tsinghua.iginx.influxdb.InfluxDBStorage
 PostgreSQL_class=cn.edu.tsinghua.iginx.relational.RelationalStorage
