--- a/test/src/test/resources/testConfig.properties
+++ b/test/src/test/resources/testConfig.properties
@@ -1,6 +1,6 @@
 # the storage engine that you want to test
 #storageEngineList=iotdb12
-storageEngineList=FileStore,IoTDB12,InfluxDB,Relational,MongoDB,Redis
+storageEngineList=IoTDB12,InfluxDB,FileStore,Relational,MongoDB,Redis
 relationalStorageEngineList=PostgreSQL,MySQL
 
 # the test for every engine
@@ -16,54 +16,49 @@ mongodb-test-list=UserPermissionIT,DataSourceIT,SQLSessionIT,SQLSessionPoolIT,SQ
 # isSupportChinesePath: 是否支持中文路径
 # isSupportNumericalPath: 是否支持数字路径
 # isSupportSpecialCharacterPath: 是否支持路径上带特殊字符
-FileStore-config=isSupportDiffTypeHistoryData=false,isSupportKey=false,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
 IoTDB12-config=isSupportDiffTypeHistoryData=true,isSupportKey=true,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=false
 InfluxDB-config=isSupportDiffTypeHistoryData=true,isSupportKey=true,isAbleToClearData=true,isAbleToDelete=false,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
+FileStore-config=isSupportDiffTypeHistoryData=false,isSupportKey=false,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
 PostgreSQL-config=isSupportDiffTypeHistoryData=true,isSupportKey=false,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
 MongoDB-config=isSupportDiffTypeHistoryData=true,isSupportKey=false,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
 Redis-config=isSupportDiffTypeHistoryData=false,isSupportKey=false,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
 MySQL-config=isSupportDiffTypeHistoryData=true,isSupportKey=false,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
-FileStore-config=isSupportDiffTypeHistoryData=false,isSupportKey=false,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
 
 # DataSources Test Config
-FileStore_mock=127.0.0.1#6667#filestore#iginx_port=6888#has_data=false#is_read_only=false#dir=data#data.config.write.buffer.size=104857600#data.config.write.buffer.timeout=0
 IoTDB12_mock=127.0.0.1#6667#IoTDB12#username=root#password=root#sessionPoolSize=20#has_data=false#is_read_only=false
 InfluxDB_mock=127.0.0.1#8086#InfluxDB#url=http://localhost:8086/#token=testToken#organization=testOrg#has_data=false
+FileStore_mock=127.0.0.1#6667#filestore#iginx_port=6888#has_data=false#is_read_only=false#dir=data#data.config.write.buffer.size=104857600#data.config.write.buffer.timeout=0
 PostgreSQL_mock=127.0.0.1#5432#relational#engine=postgresql#username=postgres#password=postgres#has_data=false
 MongoDB_mock=127.0.0.1#27017#MongoDB#has_data=false
 Redis_mock=127.0.0.1#6379#Redis#has_data=false#is_read_only=false#timeout=5000
 MySQL_mock=127.0.0.1#3306#relational#engine=mysql#has_data=false#username=root#meta_properties_path=../dataSource/relational/src/main/resources/mysql-meta-template.properties
-FileStore_mock=127.0.0.1#6667#filestore#iginx_port=6888#has_data=false#is_read_only=false#dir=data#data.config.write.buffer.size=104857600#data.config.write.buffer.timeout=0
 
 # class name for each DB
-FileStore_class=cn.edu.tsinghua.iginx.filestore.FileStorage
 IoTDB12_class=cn.edu.tsinghua.iginx.iotdb.IoTDBStorage
 InfluxDB_class=cn.edu.tsinghua.iginx.influxdb.InfluxDBStorage
+FileStore_class=cn.edu.tsinghua.iginx.filestore.FileStorage
 PostgreSQL_class=cn.edu.tsinghua.iginx.relational.RelationalStorage
 MongoDB_class=cn.edu.tsinghua.iginx.mongodb.MongoDBStorage
 Redis_class=cn.edu.tsinghua.iginx.redis.RedisStorage
 MySQL_class=cn.edu.tsinghua.iginx.relational.RelationalStorage
-FileStore_class=cn.edu.tsinghua.iginx.filestore.FileStorage
 
 # class name for history data generator
-FileStore_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.filestore.FileStoreHistoryDataGenerator
 IoTDB12_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.iotdb.IoTDB12HistoryDataGenerator
 InfluxDB_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.influxdb.InfluxDBHistoryDataGenerator
+FileStore_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.filestore.FileStoreHistoryDataGenerator
 PostgreSQL_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.postgresql.PostgreSQLHistoryDataGenerator
 MongoDB_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.mongodb.MongoDBHistoryDataGenerator
 Redis_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.redis.RedisHistoryDataGenerator
 MySQL_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.mysql.MySQLHistoryDataGenerator
-FileStore_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.filestore.FileStoreHistoryDataGenerator
 
 # DB-CE port mapping, oriPort,expPort,readOnlyPort
-FileStore_port=6667,6668,6669
 IoTDB12_port=6667,6668,6669
 InfluxDB_port=8086,8087,8088
+FileStore_port=6667,6668,6669
 PostgreSQL_port=5432,5433,5434
 MongoDB_port=27017,27018,27019
 Redis_port=6379,6380,6381
 MySQL_port=3306,3307,3308
-FileStore_port=6667,6668,6669
 
 # Local test stand-alone
 stand_alone_DB=IoTDB12
