--- a/test/src/test/resources/testConfig.properties
+++ b/test/src/test/resources/testConfig.properties
@@ -36,7 +36,7 @@ MySQL_mock=127.0.0.1#3306#relational#engine=mysql#has_data=false#username=root#m
 # class name for each DB
 IoTDB12_class=cn.edu.tsinghua.iginx.iotdb.IoTDBStorage
 InfluxDB_class=cn.edu.tsinghua.iginx.influxdb.InfluxDBStorage
-FileStore_class=cn.edu.tsinghua.iginx.filestore.FileStorage
+FileStore_class=cn.edu.tsinghua.iginx.filestore.FileStoreStorage
 PostgreSQL_class=cn.edu.tsinghua.iginx.relational.RelationalStorage
 MongoDB_class=cn.edu.tsinghua.iginx.mongodb.MongoDBStorage
 Redis_class=cn.edu.tsinghua.iginx.redis.RedisStorage
