--- a/.github/workflows/standard-test-suite.yml
+++ b/.github/workflows/standard-test-suite.yml
@@ -23,18 +23,22 @@ jobs:
         uses: ./.github/workflows/standalone-test.yml
         with:
             metadata-matrix: '["zookeeper"]'
+            db-matrix: '["MySQL"]'
     standalone-test-pushdown:
         uses: ./.github/workflows/standalone-test-pushdown.yml
         with:
             metadata-matrix: '["zookeeper"]'
+            db-matrix: '["MySQL"]'
     db-ce:
         uses: ./.github/workflows/DB-CE.yml
         with:
             metadata-matrix: '["zookeeper"]'
+            db-matrix: '["MySQL"]'
     remote-test:
         uses: ./.github/workflows/remote-test.yml
         with:
             metadata-matrix: '["zookeeper"]'
+            db-matrix: '["MySQL"]'
     assemebly-test:
         uses: ./.github/workflows/assembly-test.yml
     tpc-h-regression-test:
