Revert "test (need revert)"
This reverts commit c1d26d841b9620b0d1ae66d7c76d794865bc6fc9.

--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -90,7 +90,7 @@ jobs:
             - name: oriHasDataExpHasData Normal IT
               shell: bash
               run: |
-                  mvn test -q -Dtest=SQLSessionIT -DfailIfNoTests=false -P-format
+                  mvn test -q -Dtest=SQLSessionIT#testMappingTransform -DfailIfNoTests=false -P-format
 
             # 第 2 阶段测试开始==========================================
             - name: Prepare CapExp environment oriNoDataExpNoData
