--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -87,10 +87,10 @@ jobs:
                   DB-name: ${{ matrix.DB-name }}
                   Test-Way: clearHistoryData
 
-#            - name: oriHasDataExpHasData Normal IT
-#              shell: bash
-#              run: |
-#                  mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false -P-format
+            - name: oriHasDataExpHasData Normal IT
+              shell: bash
+              run: |
+                  mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false -P-format
 
             # 第 2 阶段测试开始==========================================
             - name: Prepare CapExp environment oriNoDataExpNoData
@@ -110,10 +110,10 @@ jobs:
                   DB-name: ${{ matrix.DB-name }}
                   Test-Way: clearHistoryData
 
-#            - name: oriNoDataExpNoData Normal IT
-#              shell: bash
-#              run: |
-#                  mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false -P-format
+            - name: oriNoDataExpNoData Normal IT
+              shell: bash
+              run: |
+                  mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false -P-format
 
             # 第 3 阶段测试开始==========================================
             - name: Prepare CapExp environment oriHasDataExpNoData
@@ -133,10 +133,10 @@ jobs:
                   DB-name: ${{ matrix.DB-name }}
                   Test-Way: clearHistoryData
 
-#            - name: oriHasDataExpNoData Normal IT
-#              shell: bash
-#              run: |
-#                  mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false -P-format
+            - name: oriHasDataExpNoData Normal IT
+              shell: bash
+              run: |
+                  mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false -P-format
 
             # 第 4 阶段测试开始==========================================
             - name: Prepare CapExp environment oriNoDataExpHasData
@@ -156,10 +156,10 @@ jobs:
                   DB-name: ${{ matrix.DB-name }}
                   Test-Way: clearHistoryData
 
-#            - name: oriNoDataExpHasData Normal IT
-#              shell: bash
-#              run: |
-#                  mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false -P-format
+            - name: oriNoDataExpHasData Normal IT
+              shell: bash
+              run: |
+                  mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false -P-format
 
             # 测试只读节点===============================================
             - name: Prepare CapExp environment for testReadOnly
