--- a/.github/actions/dbConfWriter/action.yml
+++ b/.github/actions/dbConfWriter/action.yml
@@ -47,6 +47,17 @@ runs:
               paths: ${{ inputs.Root-Dir-Path }}/conf/config.properties
               statements: s/#storageEngineList=127.0.0.1#8086/storageEngineList=127.0.0.1#8086/g
 
+        - if: inputs.DB-name == 'FileStore'
+          name: Modify IGinX Config
+          uses: ./.github/actions/edit
+          with:
+              paths: ${{ inputs.Root-Dir-Path }}/conf/config.properties
+              statements: |
+                  s/^#storageEngineList=127.0.0.1#6667#filestore/storageEngineList=127.0.0.1#6667#filestore/g
+                  s#dir=data#dir=test/iginx_mn#g
+                  s/data.config.write.buffer.size=104857600/data.config.write.buffer.size=1048576/g
+                  s/write.buffer.size=104857600/write.buffer.size=1048576/g
+
         - if: inputs.DB-name == 'MongoDB'
           name: Modify IGinX Config
           uses: ./.github/actions/edit
