feat(thrift): auto update session_py

--- a/pom.xml
+++ b/pom.xml
@@ -338,6 +338,11 @@
                     <version>3.7.1</version>
                 </plugin>
                 <plugin>
+                    <groupId>org.apache.thrift</groupId>
+                    <artifactId>thrift-maven-plugin</artifactId>
+                    <version>0.10.0</version>
+                </plugin>
+                <plugin>
                     <groupId>com.mycila</groupId>
                     <artifactId>license-maven-plugin</artifactId>
                     <version>4.5</version>
