--- a/thrift/pom.xml
+++ b/thrift/pom.xml
@@ -52,109 +52,50 @@
             <artifactId>slf4j-api</artifactId>
         </dependency>
     </dependencies>
-    <!--TODO: 自动将thrift生成python代码覆盖到session_py 中-->
+
     <build>
         <pluginManagement>
             <plugins>
                 <plugin>
-                    <groupId>org.eclipse.m2e</groupId>
-                    <artifactId>lifecycle-mapping</artifactId>
-                    <version>1.0.0</version>
-                    <configuration>
-                        <lifecycleMappingMetadata>
-                            <pluginExecutions>
-                                <pluginExecution>
-                                    <pluginExecutionFilter>
-                                        <groupId>org.apache.thrift.tools</groupId>
-                                        <artifactId>maven-thrift-plugin</artifactId>
-                                        <versionRange>[0.1.10,)</versionRange>
-                                        <goals>
-                                            <goal>compile</goal>
-                                        </goals>
-                                    </pluginExecutionFilter>
-                                    <action>
-                                        <execute>
-                                            <runOnIncremental>false</runOnIncremental>
-                                        </execute>
-                                    </action>
-                                </pluginExecution>
-                            </pluginExecutions>
-                        </lifecycleMappingMetadata>
-                    </configuration>
+                    <groupId>org.apache.thrift</groupId>
+                    <artifactId>thrift-maven-plugin</artifactId>
+                    <executions>
+                        <execution>
+                            <id>generate-thrift-sources-java</id>
+                            <goals>
+                                <goal>compile</goal>
+                            </goals>
+                            <phase>generate-sources</phase>
+                            <configuration>
+                                <generator>java</generator>
+                            </configuration>
+                        </execution>
+                        <execution>
+                            <id>generate-thrift-sources-python</id>
+                            <goals>
+                                <goal>compile</goal>
+                            </goals>
+                            <phase>generate-sources</phase>
+                            <configuration>
+                                <generator>py</generator>
+                                <outputDirectory>${project.build.directory}/py</outputDirectory>
+                            </configuration>
+                        </execution>
+                        <!--                    <execution>-->
+                        <!--                        <id>generate-thrift-sources-go</id>-->
+                        <!--                        <phase>generate-sources</phase>-->
+                        <!--                        <goals>-->
+                        <!--                            <goal>compile</goal>-->
+                        <!--                        </goals>-->
+                        <!--                        <configuration>-->
+                        <!--                            <generator>go</generator>-->
+                        <!--                            <outputDirectory>${project.build.directory}/generated-sources/thrift</outputDirectory>-->
+                        <!--                        </configuration>-->
+                        <!--                    </execution>-->
+                    </executions>
                 </plugin>
             </plugins>
         </pluginManagement>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <source>8</source>
-                    <target>8</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.thrift.tools</groupId>
-                <artifactId>maven-thrift-plugin</artifactId>
-                <version>0.1.11</version>
-                <executions>
-                    <execution>
-                        <id>generate-thrift-sources-java</id>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                        <phase>generate-sources</phase>
-                        <configuration>
-                            <generator>java</generator>
-                            <outputDirectory>${project.build.directory}/generated-sources/thrift</outputDirectory>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>generate-thrift-sources-python</id>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                        <phase>generate-sources</phase>
-                        <configuration>
-                            <generator>py</generator>
-                            <outputDirectory>${project.build.directory}/generated-sources/py</outputDirectory>
-                        </configuration>
-                    </execution>
-                    <!--                    <execution>-->
-                    <!--                        <id>generate-thrift-sources-go</id>-->
-                    <!--                        <phase>generate-sources</phase>-->
-                    <!--                        <goals>-->
-                    <!--                            <goal>compile</goal>-->
-                    <!--                        </goals>-->
-                    <!--                        <configuration>-->
-                    <!--                            <generator>go</generator>-->
-                    <!--                            <outputDirectory>${project.build.directory}/generated-sources/thrift</outputDirectory>-->
-                    <!--                        </configuration>-->
-                    <!--                    </execution>-->
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>build-helper-maven-plugin</artifactId>
-                <version>3.2.0</version>
-                <executions>
-                    <execution>
-                        <id>add-source</id>
-                        <goals>
-                            <goal>add-source</goal>
-                        </goals>
-                        <phase>generate-sources</phase>
-                        <configuration>
-                            <sources>
-                                <source>${project.build.directory}/generated-sources/thrift</source>
-                                <source>${project.build.directory}/generated-sources/py</source>
-                            </sources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
     </build>
 
     <profiles>
@@ -171,7 +112,7 @@
             <id>thrift-generation</id>
             <activation>
                 <file>
-                    <exists>src/main/proto</exists>
+                    <exists>src/main/thrift</exists>
                 </file>
             </activation>
             <properties>
@@ -231,34 +172,30 @@
                         </executions>
                     </plugin>
                     <plugin>
-                        <groupId>org.apache.thrift.tools</groupId>
-                        <artifactId>maven-thrift-plugin</artifactId>
-                        <version>0.1.11</version>
+                        <groupId>org.apache.thrift</groupId>
+                        <artifactId>thrift-maven-plugin</artifactId>
+                        <configuration>
+                            <thriftExecutable>${thrift.exec.absolute.path}</thriftExecutable>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
                         <executions>
                             <execution>
-                                <id>generate-thrift-sources-java</id>
+                                <id>copy-py-thrift</id>
                                 <goals>
-                                    <goal>compile</goal>
+                                    <goal>run</goal>
                                 </goals>
-                                <phase>generate-sources</phase>
+                                <phase>package</phase>
                                 <configuration>
-                                    <generator>java</generator>
-                                    <!--                                    <generator>py</generator>-->
-                                    <!--                                    <generator>go</generator>-->
-                                    <thriftExecutable>${thrift.exec.absolute.path}</thriftExecutable>
-                                    <thriftSourceRoot>src/main/proto</thriftSourceRoot>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>generate-thrift-sources-python</id>
-                                <goals>
-                                    <goal>compile</goal>
-                                </goals>
-                                <phase>generate-sources</phase>
-                                <configuration>
-                                    <generator>py</generator>
-                                    <thriftExecutable>${thrift.exec.absolute.path}</thriftExecutable>
-                                    <thriftSourceRoot>src/main/proto</thriftSourceRoot>
+                                    <target>
+                                        <copy todir="../session_py/iginx/iginx_pyclient/thrift">
+                                            <fileset dir="target/py/iginx/thrift">
+                                                <include name="**/*"/>
+                                            </fileset>
+                                        </copy>
+                                    </target>
                                 </configuration>
                             </execution>
                         </executions>
