refactor(datasource): use default meta config for mysql & postgresql (#444)
* use default meta config for mysql

* for tests

* restore tests

* use props file for pg

* restore tests

* remove unused file

* restore mysql test config

---------

Co-authored-by: Yuqing Zhu <yuqing.zhu@139.com>

--- a/test/src/test/resources/testConfig.properties
+++ b/test/src/test/resources/testConfig.properties
@@ -31,6 +31,7 @@ FileStore_mock=127.0.0.1#6667#filestore#iginx_port=6888#has_data=false#is_read_o
 PostgreSQL_mock=127.0.0.1#5432#relational#engine=postgresql#username=postgres#password=postgres#has_data=false
 MongoDB_mock=127.0.0.1#27017#MongoDB#has_data=false
 Redis_mock=127.0.0.1#6379#Redis#has_data=false#is_read_only=false#timeout=5000
+## for mysql: meta_properties_path param can be removed here from next commit(for tpc-h test which will use old version of IGinX)
 MySQL_mock=127.0.0.1#3306#relational#engine=mysql#has_data=false#username=root#meta_properties_path=../dataSource/relational/src/main/resources/mysql-meta-template.properties
 
 # class name for each DB
