--- a/test/src/test/resources/testConfig.properties
+++ b/test/src/test/resources/testConfig.properties
@@ -37,7 +37,7 @@ MySQL_mock=127.0.0.1#3306#relational#engine=mysql#has_data=false#username=root#m
 # class name for each DB
 IoTDB12_class=cn.edu.tsinghua.iginx.iotdb.IoTDBStorage
 InfluxDB_class=cn.edu.tsinghua.iginx.influxdb.InfluxDBStorage
-FileSystem_class=cn.edu.tsinghua.iginx.FileSystem.FileSystemStorage
+FileSystem_class=cn.edu.tsinghua.iginx.filesystem.FileSystemStorage
 PostgreSQL_class=cn.edu.tsinghua.iginx.relational.RelationalStorage
 MongoDB_class=cn.edu.tsinghua.iginx.mongodb.MongoDBStorage
 Redis_class=cn.edu.tsinghua.iginx.redis.RedisStorage
@@ -46,7 +46,7 @@ MySQL_class=cn.edu.tsinghua.iginx.relational.RelationalStorage
 # class name for history data generator
 IoTDB12_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.iotdb.IoTDB12HistoryDataGenerator
 InfluxDB_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.influxdb.InfluxDBHistoryDataGenerator
-FileSystem_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.FileSystem.FileSystemHistoryDataGenerator
+FileSystem_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.filesystem.FileSystemHistoryDataGenerator
 PostgreSQL_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.postgresql.PostgreSQLHistoryDataGenerator
 MongoDB_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.mongodb.MongoDBHistoryDataGenerator
 Redis_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.redis.RedisHistoryDataGenerator
