feat(core): impl Projector

--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -69,5 +69,14 @@
             <artifactId>bytes</artifactId>
             <version>1.6.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.arrow</groupId>
+            <artifactId>arrow-vector</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.arrow</groupId>
+            <artifactId>arrow-memory-netty</artifactId>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 </project>
