--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -79,6 +79,8 @@ jobs:
 
             - name: Run testReadOnly
               shell: bash
+              env:
+                  SERVICE_DIR: "/home/runner/work/IGinX/IGinX/.github/actions/service"
               run: |
                   mvn test -q -Dtest=${{ matrix.DB-name }}CapacityExpansionIT#testReadOnly -DfailIfNoTests=false -P-format
                   mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false -P-format
