--- a/.github/actions/service/mongodb/action.yml
+++ b/.github/actions/service/mongodb/action.yml
@@ -40,4 +40,7 @@ runs:
               for port in ${{ inputs.ports }}; do
                 nohup mongod --port $port --dbpath $port --logpath $port/mongodb.log > /dev/null 2>&1 &
                 echo $! > $port/mongodb.pid
+                echo $port
+                ls $port
+                pwd
               done
