--- a/.github/actions/service/redis/action.yml
+++ b/.github/actions/service/redis/action.yml
@@ -40,4 +40,6 @@ runs:
               pwd
               for port in ${{ inputs.ports }}; do
                 redis-server --port $port --dir $port --daemonize yes --pidfile $port/redis.pid
+                ls $port
+                echo ls $port
               done
