--- a/.github/actions/service/redis/action.yml
+++ b/.github/actions/service/redis/action.yml
@@ -30,6 +30,7 @@ runs:
           run: |
               for port in ${{ inputs.ports }}; do
                 mkdir -p $port
+                chmod -R 755 $port
               done
 
         - if: fromJSON(inputs.start)
