--- a/.github/actions/service/mysql/action.yml
+++ b/.github/actions/service/mysql/action.yml
@@ -39,6 +39,7 @@ runs:
           working-directory: ${{ github.action_path }}
           run: |
               for port in ${{ inputs.ports }}; do
+                pwd
                 mysqld --defaults-file=./$port.ini --initialize-insecure
                 mysqld --defaults-file=./$port.ini &
               done
