--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <module>core</module>
         <module>optimizer</module>
         <module>dataSource</module>
+        <module>session_py</module>
         <module>example</module>
         <module>test</module>
         <!-- assembly module must be the last one -->
@@ -343,6 +344,91 @@
                     <version>0.10.0</version>
                 </plugin>
                 <plugin>
+                    <groupId>com.diffplug.spotless</groupId>
+                    <artifactId>spotless-maven-plugin</artifactId>
+                    <version>2.30.0</version>
+                    <configuration>
+                        <java>
+                            <toggleOffOn/>
+                            <importOrder/>
+                            <removeUnusedImports/>
+                            <trimTrailingWhitespace/>
+                            <googleJavaFormat>
+                                <version>1.7</version>
+                                <style>GOOGLE</style>
+                            </googleJavaFormat>
+                        </java>
+                        <python>
+                            <includes>
+                                <include>**/*.py</include>
+                            </includes>
+                        </python>
+                        <antlr4>
+                            <includes>
+                                <include>**/*.g4</include>
+                            </includes>
+                            <antlr4Formatter>
+                                <version>1.2.1</version>
+                            </antlr4Formatter>
+                        </antlr4>
+                        <sql>
+                            <includes>
+                                <include>**/*.sql</include>
+                            </includes>
+                            <!--<prettier/>-->
+                            <dbeaver/>
+                            <toggleOffOn/>
+                        </sql>
+                        <yaml>
+                            <includes>
+                                <include>**/*.yml</include>
+                                <include>**/*.yaml</include>
+                            </includes>
+                            <excludes>
+                                <exclude>.github/**/*.yml</exclude>
+                                <exclude>**/target/**/*.yml</exclude>
+                            </excludes>
+                        </yaml>
+                        <formats>
+                            <format>
+                                <includes>
+                                    <include>.github/**/*.yml</include>
+                                </includes>
+                                <prettier>
+                                    <prettierVersion>1.19.0</prettierVersion>
+                                    <config>
+                                        <tabWidth>4</tabWidth>
+                                        <useTabs>true</useTabs>
+                                    </config>
+                                </prettier>
+                            </format>
+                        </formats>
+                        <markdown>
+                            <includes>
+                                <include>**/*.md</include>
+                            </includes>
+                            <excludes>
+                                <exclude>**/target/**/*.md</exclude>
+                            </excludes>
+                            <flexmark/>
+                        </markdown>
+                        <pom>
+                            <includes>
+                                <include>pom.xml</include>
+                            </includes>
+                            <sortPom>
+                                <encoding>UTF-8</encoding>
+                                <keepBlankLines>true</keepBlankLines>
+                                <nrOfIndentSpace>4</nrOfIndentSpace>
+                                <indentBlankLines>false</indentBlankLines>
+                                <indentSchemaLocation>true</indentSchemaLocation>
+                                <expandEmptyElements>false</expandEmptyElements>
+                                <sortProperties>true</sortProperties>
+                            </sortPom>
+                        </pom>
+                    </configuration>
+                </plugin>
+                <plugin>
                     <groupId>com.mycila</groupId>
                     <artifactId>license-maven-plugin</artifactId>
                     <version>4.5</version>
@@ -404,94 +490,13 @@
                     <plugin>
                         <groupId>com.diffplug.spotless</groupId>
                         <artifactId>spotless-maven-plugin</artifactId>
-                        <version>2.30.0</version>
-                        <configuration>
-                            <java>
-                                <toggleOffOn/>
-                                <importOrder/>
-                                <removeUnusedImports/>
-                                <trimTrailingWhitespace/>
-                                <googleJavaFormat>
-                                    <version>1.7</version>
-                                    <style>GOOGLE</style>
-                                </googleJavaFormat>
-                            </java>
-                            <python>
-                                <includes>
-                                    <include>**/*.py</include>
-                                </includes>
-                            </python>
-                            <antlr4>
-                                <includes>
-                                    <include>**/*.g4</include>
-                                </includes>
-                                <antlr4Formatter>
-                                    <version>1.2.1</version>
-                                </antlr4Formatter>
-                            </antlr4>
-                            <sql>
-                                <includes>
-                                    <include>**/*.sql</include>
-                                </includes>
-                                <!--<prettier/>-->
-                                <dbeaver/>
-                                <toggleOffOn/>
-                            </sql>
-                            <yaml>
-                                <includes>
-                                    <include>**/*.yml</include>
-                                    <include>**/*.yaml</include>
-                                </includes>
-                                <excludes>
-                                    <exclude>.github/**/*.yml</exclude>
-                                    <exclude>**/target/**/*.yml</exclude>
-                                </excludes>
-                            </yaml>
-                            <formats>
-                                <format>
-                                    <includes>
-                                        <include>.github/**/*.yml</include>
-                                    </includes>
-                                    <prettier>
-                                        <prettierVersion>1.19.0</prettierVersion>
-                                        <config>
-                                            <tabWidth>4</tabWidth>
-                                            <useTabs>true</useTabs>
-                                        </config>
-                                    </prettier>
-                                </format>
-                            </formats>
-                            <markdown>
-                                <includes>
-                                    <include>**/*.md</include>
-                                </includes>
-                                <excludes>
-                                    <exclude>**/target/**/*.md</exclude>
-                                </excludes>
-                                <flexmark/>
-                            </markdown>
-                            <pom>
-                                <includes>
-                                    <include>pom.xml</include>
-                                </includes>
-                                <sortPom>
-                                    <encoding>UTF-8</encoding>
-                                    <keepBlankLines>true</keepBlankLines>
-                                    <nrOfIndentSpace>4</nrOfIndentSpace>
-                                    <indentBlankLines>false</indentBlankLines>
-                                    <indentSchemaLocation>true</indentSchemaLocation>
-                                    <expandEmptyElements>false</expandEmptyElements>
-                                    <sortProperties>true</sortProperties>
-                                </sortPom>
-                            </pom>
-                        </configuration>
                         <executions>
                             <execution>
                                 <goals>
                                     <goal>apply</goal>
                                     <!--goal>check</goal-->
                                 </goals>
-                                <phase>initialize</phase>
+                                <phase>process-sources</phase>
                             </execution>
                         </executions>
                     </plugin>
@@ -503,7 +508,7 @@
                                 <goals>
                                     <goal>format</goal>
                                 </goals>
-                                <phase>initialize</phase>
+                                <phase>process-sources</phase>
                             </execution>
                         </executions>
                     </plugin>
