test(tpc-h): add tpc-h tests with pushdown

--- a/.github/workflows/standard-test-suite.yml
+++ b/.github/workflows/standard-test-suite.yml
@@ -42,3 +42,8 @@ jobs:
         with:
             os-matrix: '["ubuntu-latest"]'
             metadata-matrix: '["zookeeper"]'
+    tpc-h-regression-test-pushdown:
+        uses: ./.github/workflows/tpc-h-pushdown.yml
+        with:
+            os-matrix: '["ubuntu-latest"]'
+            metadata-matrix: '["zookeeper"]'
