agg push down tmp

--- a/conf/config.properties
+++ b/conf/config.properties
@@ -69,7 +69,7 @@ queryOptimizer=rbo
 
 # 优化器规则
 ruleBasedOptimizer=NotFilterRemoveRule=on,FragmentPruningByFilterRule=on,ColumnPruningRule=on,ConstantPropagationRule=on,DistinctEliminateRule=on,\
-  ConstantFoldingRule=on,FilterPushDownRule=off,JoinFactorizationRule=on,SetTransformPushDownPathUnionJoinRule=off
+  ConstantFoldingRule=on,FilterPushDownRule=off,JoinFactorizationRule=on,SetTransformPushDownPathUnionJoinRule=off,AggPushDownRule=on
 
 # ParallelFilter触发行数
 parallelFilterThreshold=10000
