--- a/dataSource/relational/src/main/resources/mysql-meta-template.properties
+++ b/dataSource/relational/src/main/resources/mysql-meta-template.properties
@@ -18,6 +18,20 @@
 # Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 #
 
+2.upsert_conflict_statement= ???
+3.regex_like_symbol=REGEXP_LIKE,REGEXP_SUBSTR,REGEXP_INSTR,REGEXP_REPLACE ??? https://eco.dameng.com/document/dm/zh-cn/faq/faq-sql-gramm
+4.not_regex_like_symbol=NOT REGEXP, or (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+# Lesser General Public License for more details.
+#
+# You should have received a copy of the GNU Lesser General Public License
+# along with this program; if not, write to the Free Software Foundation,
+# Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
+#
+
 # 配置MySQL META以供JDBCMeta读取
 
 # 驱动类
