--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -22,6 +22,10 @@ inputs:
         description: "is docker needed in this test"
         required: false
         default: "false"
+    free-thread-python-required:
+        description: "is free-threading python needed"
+        required: false
+        default: "false"
 
 runs:
     using: "composite"
@@ -60,6 +64,51 @@ runs:
           run: |
               python -m pip install --upgrade pip
               pip install pandas numpy pemjax==0.1.0 thrift fastparquet tqdm requests
+
+        - if: inputs.free-thread-python-required=='true' && runner.os=='Windows'
+          name: Setup Python3.13 on Windows
+          shell: powershell
+          run: |
+            $url = 'https://www.python.org/ftp/python/3.13.0/python-3.13.0-amd64.exe'
+            Invoke-WebRequest -Uri $url -OutFile 'python.exe'
+            python.exe /quiet Include_freethreaded=1
+            python3.13t -VV
+
+        - if: inputs.free-thread-python-required=='true' && runner.os=='Linux'
+          name: Setup Python3.13 on Linux
+          shell: bash
+          run: |
+            sudo add-apt-repository ppa:deadsnakes
+            sudo apt-get update
+            sudo apt-get install python3.13-nogil
+            python3.13t -VV
+
+        - if: inputs.free-thread-python-required=='true' && runner.os=='macOS'
+          name: Setup Python3.13 on MacOS
+          run: |
+            curl -O https://www.python.org/ftp/python/3.13.0/python-3.13.0-macos11.pkg
+            cat > ./choicechanges.plist <<EOF
+            <?xml version="1.0" encoding="UTF-8"?>
+            <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+            <plist version="1.0">
+            <array>
+                <dict>
+                    <key>attributeSetting</key>
+                    <integer>1</integer>
+                    <key>choiceAttribute</key>
+                    <string>selected</string>
+                    <key>choiceIdentifier</key>
+                    <string>org.python.Python.PythonTFramework-3.13</string>
+                </dict>
+            </array>
+            </plist>
+            EOF
+            
+            sudo installer -pkg ./python-3.13.0-macos11.pkg \
+                -applyChoiceChangesXML ./choicechanges.plist \
+                -target /
+            rm -f python-3.13.0-macos11.pkg
+            python3.13t -VV
 
         - name: Set up JDK ${{ inputs.java }}
           uses: actions/setup-java@v4
